@@ -14,7 +14,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import org.opensearch.rest.BaseRestHandler;
+
 import static org.opensearch.rest.RestStatus.INTERNAL_SERVER_ERROR;
 import static org.opensearch.rest.RestStatus.NOT_FOUND;
 
@@ -23,38 +23,38 @@ import java.util.Objects;
 import java.util.function.Function;
 
 import static org.apache.http.entity.ContentType.APPLICATION_JSON;
+import org.opensearch.OpenSearchException;
 import org.opensearch.common.logging.DeprecationLogger;
 import org.opensearch.common.xcontent.json.JsonXContent;
+import org.opensearch.core.common.Strings;
 import org.opensearch.extensions.rest.ExtensionRestResponse;
+import org.opensearch.rest.BaseRestHandler;
+import org.opensearch.rest.DeprecationRestHandler;
+import org.opensearch.rest.NamedRoute;
 import org.opensearch.rest.RestHandler.DeprecatedRoute;
 import org.opensearch.rest.RestHandler.ReplacedRoute;
-import org.opensearch.rest.RestHandler.Route;
-import org.opensearch.rest.RestRequest.Method;
-import org.opensearch.rest.DeprecationRestHandler;
 import org.opensearch.rest.RestRequest;
+import org.opensearch.rest.RestRequest.Method;
+import org.opensearch.rest.RestResponse;
 import org.opensearch.rest.RestStatus;
 
 /**
  * Provides convenience methods to reduce boilerplate code in an {@link ExtensionRestHandler} implementation.
  */
 public abstract class BaseExtensionRestHandler implements ExtensionRestHandler {
+
+    private static final String VALID_ROUTE_PREFIX_PATTERN = "^[a-zA-Z0-9_]*$";
+
+    private String routeNamePrefix;
+
     /**
      * Constant for JSON content type
      */
     public static final String JSON_CONTENT_TYPE = APPLICATION_JSON.withCharset(StandardCharsets.UTF_8).toString();
 
-    /**
-     * Defines a list of methods which handle each rest {@link Route}. Override this in a subclass to use the functional syntax.
-     *
-     * @return a list of {@link RouteHandler} with corresponding methods to each route.
-     */
-    protected List<RouteHandler> routeHandlers() {
-        return Collections.emptyList();
-    }
-
     @Override
-    public List<Route> routes() {
-        return List.copyOf(routeHandlers());
+    public List<NamedRoute> routes() {
+        return Collections.emptyList();
     }
 
     /**
@@ -80,6 +80,32 @@ public abstract class BaseExtensionRestHandler implements ExtensionRestHandler {
         return Collections.emptyList();
     }
 
+    /**
+     * Sets the route prefix that can be used to prepend route names
+     * @param prefix the prefix to be used
+     */
+    public void setRouteNamePrefix(String prefix) {
+        // we by-pass null assignment as routeNamePrefixes are not mandatory
+        if (prefix != null && !prefix.matches(VALID_ROUTE_PREFIX_PATTERN)) {
+            throw new OpenSearchException(
+                "Invalid route name prefix specified. The prefix may include the following characters" + " 'a-z', 'A-Z', '0-9', '_'"
+            );
+        }
+        routeNamePrefix = prefix;
+    }
+
+    /**
+     * Generates a name for the handler prepended with the route prefix
+     * @param routeName The human-readable name for a route registered by this extension
+     * @return Returns a name conditionally prepended with the valid route prefix
+     */
+    protected String addRouteNamePrefix(String routeName) {
+        if (Strings.isNullOrEmpty(routeNamePrefix)) {
+            return routeName;
+        }
+        return routeNamePrefix + ":" + routeName;
+    }
+
     @Override
     public List<ReplacedRoute> replacedRoutes() {
         return List.copyOf(replacedRouteHandlers());
@@ -87,12 +113,12 @@ public abstract class BaseExtensionRestHandler implements ExtensionRestHandler {
 
     @Override
     public ExtensionRestResponse handleRequest(RestRequest request) {
-        Optional<RouteHandler> handler = routeHandlers().stream()
+        Optional<NamedRoute> route = routes().stream()
             .filter(rh -> rh.getMethod().equals(request.method()))
             .filter(rh -> restPathMatches(request.path(), rh.getPath()))
             .findFirst();
-        if (handler.isPresent()) {
-            return handler.get().handleRequest(request);
+        if (route.isPresent() && route.get().handler() != null) {
+            return (ExtensionRestResponse) route.get().handler().apply(request);
         }
         Optional<DeprecatedRouteHandler> deprecatedHandler = deprecatedRouteHandlers().stream()
             .filter(rh -> rh.getMethod().equals(request.method()))
@@ -122,7 +148,7 @@ public abstract class BaseExtensionRestHandler implements ExtensionRestHandler {
      * Determines if the request's path is a match for the configured handler path.
      *
      * @param requestPath The path from the {@link RestRequest}
-     * @param handlerPath The path from the {@link RouteHandler} or {@link DeprecatedRouteHandler}
+     * @param handlerPath The path from the {@link NamedRoute} or {@link DeprecatedRouteHandler} or {@link ReplacedRouteHandler}
      * @return true if the request path matches the route
      */
     private boolean restPathMatches(String requestPath, String handlerPath) {
@@ -224,41 +250,11 @@ public abstract class BaseExtensionRestHandler implements ExtensionRestHandler {
     }
 
     /**
-     * A subclass of {@link Route} that includes a handler method for that route.
-     */
-    public static class RouteHandler extends Route {
-
-        private final Function<RestRequest, ExtensionRestResponse> responseHandler;
-
-        /**
-         * Handle the method and path with the specified handler.
-         *
-         * @param method The {@link Method} to handle.
-         * @param path The path to handle.
-         * @param handler The method which handles the method and path.
-         */
-        public RouteHandler(Method method, String path, Function<RestRequest, ExtensionRestResponse> handler) {
-            super(method, path);
-            this.responseHandler = handler;
-        }
-
-        /**
-         * Executes the handler for this route.
-         *
-         * @param request The request to handle
-         * @return the {@link ExtensionRestResponse} result from the handler for this route.
-         */
-        public ExtensionRestResponse handleRequest(RestRequest request) {
-            return responseHandler.apply(request);
-        }
-    }
-
-    /**
      * A subclass of {@link DeprecatedRoute} that includes a handler method for that route.
      */
     public static class DeprecatedRouteHandler extends DeprecatedRoute {
 
-        private final Function<RestRequest, ExtensionRestResponse> responseHandler;
+        private final Function<RestRequest, RestResponse> responseHandler;
 
         /**
          * Handle the method and path with the specified handler.
@@ -268,12 +264,7 @@ public abstract class BaseExtensionRestHandler implements ExtensionRestHandler {
          * @param deprecationMessage The message to log with the deprecation logger
          * @param handler The method which handles the method and path.
          */
-        public DeprecatedRouteHandler(
-            Method method,
-            String path,
-            String deprecationMessage,
-            Function<RestRequest, ExtensionRestResponse> handler
-        ) {
+        public DeprecatedRouteHandler(Method method, String path, String deprecationMessage, Function<RestRequest, RestResponse> handler) {
             super(method, path, deprecationMessage);
             this.responseHandler = handler;
         }
@@ -285,7 +276,7 @@ public abstract class BaseExtensionRestHandler implements ExtensionRestHandler {
          * @return the {@link ExtensionRestResponse} result from the handler for this route.
          */
         public ExtensionRestResponse handleRequest(RestRequest request) {
-            return responseHandler.apply(request);
+            return (ExtensionRestResponse) responseHandler.apply(request);
         }
     }
 
